# talon-handler

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml  publish.yml
scripts/: update_version.py
src/talon_handler/: config.py  constants.py  discovery.py  main.py  monitor.py  telegram_bot.py
tests/: test_core.py
